# chat-app

./: .gitignore  Procfile  README.md  app.py  models.py  pyproject.toml  requirements.txt
chat-app-react/: package-lock.json  package.json
chat-app-react/public/: index.html
chat-app-react/src/: App.css  App.js
chat-app-react/src/components/: ChatApp.css  ChatPage.js  ChatView.js  NotFound.js  RegisterPage.js  RegistrationSuccess.css  UserList.css
chat_app_flask/: .env  app.py  models.py  pyproject.toml
chat_app_flask/chat-app-react/: package-lock.json  package.json
chat_app_flask/chat-app-react/public/: index.html
chat_app_flask/chat-app-react/src/: App.css  App.js
chat_app_flask/chat-app-react/src/components/: Chat.css  Chat.js  ChatApp.js  ChatPage.js  ChatView.css  ChatView.js  LoginPage.css  LoginPage.js  RegisterPage.css  RegisterPage.js  RegistrationSuccess.js  UserList.css  UserList.js
chat_app_flask/templates/: login.html  register.html
