[tool.poetry]
name = "chat app"
version = "0.1.0"
description = ""
authors = ["Raymond Dang <raymondquocdang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
requests = "^2.28.1"
gunicorn = "^20.1.0"
Flask-SQLAlchemy = "^2.5.1"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.21.0"
SQLAlchemy = "^1.4.41"
Flask-Login = "^0.6.2"
Flask-Bcrypt = "^1.0.1"
Flask-Session = "^0.4.0"
Flask-Cors = "^3.0.10"
Flask-SocketIO = "^5.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
